--- a/index.html
+++ b/index.html
@@ -5,50 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Axel-One: Web Edition</title>
   <style>
-    body { font-family: sans-serif; background: #f0f0f0; text-align: center; padding: 20px; }
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+    body {
+      font-family: 'Ubuntu', sans-serif;
+      background: #f0f0f0;
+      text-align: center;
+      padding: 20px;
+      display: none;
+    }
     h1 { color: #333; }
     .cards { margin: 20px 0; }
-    .cards button { margin: 5px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
-    #log { margin-top: 30px; max-height: 300px; overflow-y: auto; text-align: left; background: #fff; padding: 10px; border: 1px solid #ccc; }
-    .slap-btn { background-color: #f44336; color: white; font-weight: bold; }
+    .cards button {
+      margin: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    #log {
+      margin-top: 30px;
+      max-height: 300px;
+      overflow-y: auto;
+      text-align: left;
+      background: #fff;
+      padding: 10px;
+      border: 1px solid #ccc;
+    }
+    .slap-btn {
+      background-color: #f44336;
+      color: white;
+      font-weight: bold;
+    }
     .hand { margin: 10px 0; }
-    .hidden { display: none; }
-    @media (max-width: 768px) {
-      .cards button { font-size: 12px; padding: 8px 16px; }
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      z-index: 1000;
     }
-    .red-flash {
-      animation: flashRed 0.5s 5;
+    .flash-red {
+      animation: flash 0.5s;
     }
-    @keyframes flashRed {
-      0% { background-color: #f0f0f0; }
-      50% { background-color: red; }
+    @keyframes flash {
+      0% { background-color: red; }
       100% { background-color: #f0f0f0; }
+    }
+    @media (max-width: 768px) {
+      .cards button {
+        font-size: 12px;
+        padding: 8px;
+      }
     }
   </style>
 </head>
 <body>
+  <div id="overlay">Matching with a random Axilian... please wait...</div>
+  <h1>Axel-One: Web Edition</h1>
+  <p><strong>Your Hand:</strong></p>
+  <div class="hand" id="playerHand"></div>
+  <p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
+  <div class="hand" id="computerHand" style="display:none"></div>
+  <div id="slapArea" style="display:none">
+    <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
+  </div>
+  <div id="log"></div>
   <audio id="deathSound" src="death.mp3"></audio>
-  <div id="startScreen">
-    <h1>Matching with a random Axilian... please wait...</h1>
-  </div>
-
-  <div id="gameArea" class="hidden">
-    <h1>Axel-One: Web Edition</h1>
-    <p><strong>Your Hand:</strong></p>
-    <div class="hand" id="playerHand"></div>
-    <p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
-    <div class="hand" id="computerHand" style="display:none"></div>
-    <div id="slapArea" style="display:none">
-      <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
-    </div>
-    <div id="log"></div>
-  </div>
 
   <script>
     let lastCard = null;
     let slapTimeout = null;
-    let playerCards = [], computerCards = [];
-    let isGameOver = false;
+    let playerCards = [];
+    let computerCards = [];
+    let devMode = false;
+
+    function enableDevMode() {
+      devMode = true;
+      console.log('%cDeveloper mode enabled.', 'color: green; font-weight: bold;');
+      computerCards.push(...Array(99).fill('1'));
+      playerCards.push(...Array(99).fill('1'));
+      updatePlayerHand();
+    }
 
     function log(msg) {
       const logBox = document.getElementById("log");
@@ -57,6 +99,7 @@
     }
 
     function validResponses(card) {
+      if (devMode) return ["1","2","3","swap","slap","blank"];
       if (["swap", "slap", "blank"].includes(card)) return ["1", "2", "3", "swap", "slap", "blank"];
       if (card === "1") return ["1", "2", "swap", "slap", "blank"];
       if (card === "2") return ["1", "2", "3", "swap", "slap", "blank"];
@@ -65,13 +108,13 @@
     }
 
     function getRandomCard() {
-      const roll = Math.random();
-      if (roll < 0.35) return '1';
-      if (roll < 0.6) return '3';
-      if (roll < 0.75) return '2';
-      if (roll < 0.85) return 'blank';
-      if (roll < 0.95) return 'swap';
-      return 'slap';
+      const roll = Math.floor(Math.random() * 12) + 1;
+      if (roll <= 3) return '1';
+      if (roll <= 5) return '2';
+      if (roll <= 8) return '3';
+      if (roll === 9) return 'swap';
+      if (roll === 10) return 'slap';
+      return 'blank';
     }
 
     function drawInitialCards() {
@@ -91,11 +134,6 @@
         btn.onclick = () => playerPlayCard(index);
         container.appendChild(btn);
       });
-      container.style.display = 'block';
-    }
-
-    function hidePlayerHand() {
-      document.getElementById("playerHand").style.display = "none";
     }
 
     function showComputerHand() {
@@ -114,27 +152,18 @@
     function checkWinCondition() {
       if (playerCards.length === 0) {
         log("You used all your cards. You win! 🎉");
-        isGameOver = true;
-        cleanupEnd();
+        document.body.innerHTML = '';
+        setTimeout(() => location.reload(), 5000);
         return true;
       }
       if (computerCards.length === 0) {
-        log("Axilian used all their cards. You lose. 💀");
-        document.body.classList.add("red-flash");
-        document.getElementById("deathSound").play();
-        isGameOver = true;
-        cleanupEnd();
+        log("Axilian used all their cards. You win! 🎉");
+        showComputerHand();
+        document.body.innerHTML = '';
+        setTimeout(() => location.reload(), 5000);
         return true;
       }
       return false;
-    }
-
-    function cleanupEnd() {
-      playerCards = [];
-      computerCards = [];
-      document.getElementById("playerHand").innerHTML = '';
-      document.getElementById("computerHand").innerHTML = '';
-      setTimeout(() => location.reload(), 5000);
     }
 
     function swapCards() {
@@ -146,7 +175,6 @@
     }
 
     function playerPlayCard(index) {
-      if (isGameOver) return;
       const card = playerCards[index];
       if (!validResponses(lastCard).includes(card)) {
         log(`Invalid move! You can't play ${card} after ${lastCard}`);
@@ -155,31 +183,31 @@
       log(`You played: ${card}`);
       lastCard = card;
       playerCards.splice(index, 1);
-      hidePlayerHand();
+      updatePlayerHand();
+      document.getElementById("playerHand").style.display = 'none';
 
-      if (card === 'slap') return startSlapBattle();
-      if (card === 'swap') swapCards();
       if (checkWinCondition()) return;
 
-      if (!hasPlayableCard(computerCards)) {
-        log("Axilian has no valid cards. You win! 🎉");
-        showComputerHand();
-        isGameOver = true;
-        cleanupEnd();
-        return;
+      if (card === 'slap') {
+        startSlapBattle();
+      } else if (card === 'swap') {
+        swapCards();
+        setTimeout(computerMove, 1000);
+      } else {
+        setTimeout(computerMove, 1000);
       }
-      setTimeout(computerMove, 1000);
     }
 
     function computerMove() {
-      if (isGameOver) return;
       const valid = validResponses(lastCard);
       const playable = computerCards.find(card => valid.includes(card));
       if (!playable) {
-        log("Axilian has no valid cards. You win! 🎉");
+        log('Axilian has no valid cards left. You win! 🎉');
         showComputerHand();
-        isGameOver = true;
-        cleanupEnd();
+        document.body.classList.add('flash-red');
+        document.getElementById("deathSound").play();
+        document.body.innerHTML = '';
+        setTimeout(() => location.reload(), 5000);
         return;
       }
       const index = computerCards.findIndex(c => c === playable);
@@ -187,19 +215,18 @@
       log(`Axilian played: ${card}`);
       lastCard = card;
 
-      if (card === 'slap') return startSlapBattle(true);
-      if (card === 'swap') swapCards();
       if (checkWinCondition()) return;
 
-      if (!hasPlayableCard(playerCards)) {
-        log('You have no valid cards. Game over. 💀');
-        document.body.classList.add("red-flash");
-        document.getElementById("deathSound").play();
-        isGameOver = true;
-        cleanupEnd();
-        return;
+      if (card === 'slap') {
+        startSlapBattle(true);
+      } else if (card === 'swap') {
+        swapCards();
+        if (!hasPlayableCard(playerCards)) endGameLoss();
+        else document.getElementById("playerHand").style.display = 'block';
+      } else {
+        if (!hasPlayableCard(playerCards)) endGameLoss();
+        else document.getElementById("playerHand").style.display = 'block';
       }
-      updatePlayerHand();
     }
 
     function hasPlayableCard(cards) {
@@ -207,48 +234,54 @@
       return cards.some(card => valid.includes(card));
     }
 
+    function endGameLoss() {
+      log('You have no valid cards left. Game over. 💀');
+      document.body.classList.add('flash-red');
+      document.getElementById("deathSound").play();
+      document.body.innerHTML = '';
+      setTimeout(() => location.reload(), 5000);
+    }
+
     function startSlapBattle(fromComputer = false) {
       document.getElementById('slapArea').style.display = 'block';
       log('SLAP battle begins! Click SLAP quickly!');
-      slapTimeout = setTimeout(() => {
-        handleSlap(fromComputer ? 'axilian' : 'computer');
-      }, 1000);
+
+      if (fromComputer && !devMode) {
+        slapTimeout = setTimeout(() => handleSlap('axilian'), 1000);
+      }
     }
 
     function handleSlap(who) {
       clearTimeout(slapTimeout);
       document.getElementById('slapArea').style.display = 'none';
+
       if (who === 'player') {
-        log('You slapped first! Axilian draws a card from the bottom.');
+        log('You slapped first! Axilian draws a card.');
         computerCards.push(getRandomCard());
       } else {
-        log('Axilian slapped first! You draw a card from the bottom.');
+        log('Axilian slapped first! You draw a card.');
         playerCards.push(getRandomCard());
       }
       updatePlayerHand();
+      document.getElementById("playerHand").style.display = 'block';
       setTimeout(computerMove, 1000);
     }
 
-    function startGame() {
+    function beginGame() {
+      document.getElementById("overlay").style.display = 'none';
+      document.body.style.display = 'block';
       drawInitialCards();
-      const first = Math.floor(Math.random() * 3) + 1;
-      if (first <= 2) {
-        log("Axilian goes first!");
-        computerMove();
+      const firstTurn = Math.floor(Math.random() * 3) + 1;
+      if (firstTurn <= 2) {
+        setTimeout(computerMove, 1000);
       } else {
-        log("You go first!");
-        updatePlayerHand();
+        document.getElementById("playerHand").style.display = 'block';
       }
     }
 
-    window.onload = () => {
-      setTimeout(() => {
-        document.getElementById("startScreen").style.display = "none";
-        document.getElementById("gameArea").classList.remove("hidden");
-        startGame();
-      }, 5000);
-    }
+    setTimeout(beginGame, 5000);
   </script>
-  <p>3.1.1</p>
+  <p>3.2.0</p>
 </body>
 </html>
+
